docs/7.57/md/abencomments_gdl.md
---
title: "Comments"
description: |
  Comments do not affect how a program is executed and are ignored by the computer. People who work with the source code, however, benefit greatly from comments, since they make the code easier to understand. There are two categories of comments in ABAP: -   Comment lines A comment line contains a com
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencomments_gdl.htm"
abapFile: "abencomments_gdl.htm"
keywords: ["do", "if", "abencomments", "gdl"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Guidelines](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_pgl.htm) →  [Structure and Style](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstructure_style_gdl.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Comments, ABENCOMMENTS_GDL, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion f
or improvement:)

Comments

Comments do not affect how a program is executed and are ignored by the computer. People who work with the source code, however, benefit greatly from comments, since they make the code easier to understand.

There are two categories of comments in ABAP:

-   Comment lines
    
    A comment line contains a comment and nothing else. It can be defined either by the \* character at the start of the program line, or by the " character at any point of a program line blank to its left.
    
-   End of line comments
    
    An end of line comment is a comment added using the " character and located on the right of an ABAP statement or part of an ABAP statement.
    

A comment line or end of line comment can have any content and this content is ignored when the program is generated using ABAP Compiler.

-   [Language of Comments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencomment_langu_guidl.htm "Guideline")
-   [Content](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencontent_guidl.htm "Guideline")
-   [Arrangement in the Source Code](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenarrange_guidl.htm "Guideline")

Continue
[Language of Comments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencomment_langu_guidl.htm)
[Content of Comments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencontent_guidl.htm)
[Arrangement in the Source Code](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenarrange_guidl.htm)